[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trello_loader"
version = "0.1.0"
description = "A tool for loading Trello boards and converting them to Markdown for AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT license (LICENSE-MIT or https://opensource.org/licenses/MIT)" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "py-trello",
    "python-dotenv",
    "typer",
]

[project.scripts]
trello-to-md = "trello_loader.trello_to_markdown:main"